--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "analyze": "ANALYZE=true bun run build"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "canvas-confetti": "^1.9.3",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
