feat(gallery): replace img with Image component

--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
 IS_TEMPLATE=false
-DATABASE_URL=postgres://default:Dpc5Md2rgSsa@ep-twilight-queen-a4xpccsy.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require
-GOOGLE_CLIENT_SECRET=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
-GOOGLE_CLIENT_ID=1090016158990-jk8hoao6dvelo48ibugiv5usjcrrl94l.apps.googleusercontent.com
-NEXT_AUTH_SECRET=WZlWr53fbIGYdXLMl+9VOVJn3/8TnOgFF1t2WqPmozM=
-NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_WEB3FORMS_API='cecb189a-5fc5-48fb-b3ab-7b4d5c9da471'
