--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "bun velite --watch & next dev",
+    "dev": "next dev",
     "build": "bun download-themes && next telemetry disable && bun velite build && next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
+    "@web3forms/react": "^1.1.3",
     "canvas-confetti": "^1.9.3",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
@@ -24,6 +25,7 @@
     "react": "^18.3.1",
     "react-compare-slider": "^3.1.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.0",
@@ -73,7 +75,6 @@
     "tailwindcss-hocus": "^0.0.7",
     "ts-prune": "^0.10.3",
     "typescript": "^5.4.5",
-    "velite": "^0.1.0-rc.3",
     "xml": "^1.0.1"
   },
   "prettier": {
